--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -996,7 +996,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                  <span class="_1wiynur">
                   <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt=""
                     decoding="async"
