--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -1131,7 +1131,7 @@
                  <span class="_1wiynur">
                   <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt=""
                     decoding="async"
