--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3651,7 +3651,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc4MA=="
                                  elementtiming="LCP-target"
@@ -3722,7 +3722,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw=="
                                  elementtiming="LCP-target"
@@ -3793,7 +3793,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng=="
                                  elementtiming="LCP-target"
@@ -3864,7 +3864,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw=="
                                  elementtiming="LCP-target"
@@ -3935,7 +3935,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2MA=="
                                  elementtiming="LCP-target"
@@ -4006,7 +4006,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA=="
                                  elementtiming="LCP-target"
@@ -4077,7 +4077,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw=="
                                  elementtiming="LCP-target"
@@ -4148,7 +4148,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ=="
                                  elementtiming="LCP-target"
@@ -4219,7 +4219,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1NA=="
                                  elementtiming="LCP-target"
@@ -4403,7 +4403,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc4MA=="
                                  elementtiming="LCP-target"
@@ -4474,7 +4474,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw=="
                                  elementtiming="LCP-target"
@@ -4545,7 +4545,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng=="
                                  elementtiming="LCP-target"
@@ -4616,7 +4616,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw=="
                                  elementtiming="LCP-target"
@@ -4687,7 +4687,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2MA=="
                                  elementtiming="LCP-target"
@@ -4758,7 +4758,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA=="
                                  elementtiming="LCP-target"
@@ -4829,7 +4829,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw=="
                                  elementtiming="LCP-target"
@@ -4900,7 +4900,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ=="
                                  elementtiming="LCP-target"
@@ -4971,7 +4971,7 @@
                                  media="(min-width: 1439.1px)"
                                 />
                                 <img
-                                 class="_9ofhsl"
+                                 class="img-full"
                                  aria-hidden="true"
                                  alt="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1NA=="
                                  elementtiming="LCP-target"
