--- a/edit/what.html
+++ b/edit/what.html
@@ -4029,7 +4029,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                    <div class="_7ytxmo">
                     <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
-                      class="_9ofhsl"
+                      class="img-full"
                       aria-hidden="true"
                       alt="Image of a group of runners"
                       elementtiming="LCP-target"
@@ -4061,7 +4061,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                    <div class="_7ytxmo">
                     <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
-                      class="_9ofhsl"
+                      class="img-full"
                       aria-hidden="true"
                       alt="Image of a group of people cooking"
                       elementtiming="LCP-target"
@@ -4095,7 +4095,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                    <div class="_7ytxmo">
                     <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
-                      class="_9ofhsl"
+                      class="img-full"
                       aria-hidden="true"
                       alt="Image of penguins"
                       elementtiming="LCP-target"
@@ -4137,7 +4137,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                      style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;"
                     >
                      <img
-                      class="_9ofhsl"
+                      class="img-full"
                       aria-hidden="true"
                       alt="Image of a woman smiling while playing guitar"
                       elementtiming="LCP-target"
