--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1392,7 +1392,7 @@
                                                             <div class="_1c81x67" style="height: 56px; width: 56px; border-radius: 50%;">
                                                               <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Learn more about the host, Kat."
                                                                 style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
-                                                                <img class="_9ofhsl" aria-hidden="true" alt="Learn more about the host, Kat." decoding="async"
+                                                                <img class="img-full" aria-hidden="true" alt="Learn more about the host, Kat." decoding="async"
                                                                   elementtiming="LCP-target"
                                                                   src="https://a0.muscache.com/im/pictures/user/11b82a0c-ee36-4314-9cd1-b04ef6e5df54.jpg?im_w=240"
                                                                   data-original-uri="https://a0.muscache.com/im/pictures/user/11b82a0c-ee36-4314-9cd1-b04ef6e5df54.jpg?im_w=240"
@@ -1454,7 +1454,7 @@
                                                                   <div class="_1h6n1zu" role="img" aria-busy="false"
                                                                     aria-label="Learn more about the host, Melanie."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
-                                                                    <img class="_9ofhsl" aria-hidden="true" alt="Learn more about the host, Melanie."
+                                                                    <img class="img-full" aria-hidden="true" alt="Learn more about the host, Melanie."
                                                                       decoding="async" elementtiming="LCP-target"
                                                                       src="https://a0.muscache.com/im/pictures/user/51096f5e-7033-44d9-ad9e-ebb6bdb41051.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/51096f5e-7033-44d9-ad9e-ebb6bdb41051.jpg?im_w=240"
@@ -1474,7 +1474,7 @@
                                                                   <div class="_1h6n1zu" role="img" aria-busy="false"
                                                                     aria-label="Learn more about the host, Karina."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
-                                                                    <img class="_9ofhsl" aria-hidden="true" alt="Learn more about the host, Karina."
+                                                                    <img class="img-full" aria-hidden="true" alt="Learn more about the host, Karina."
                                                                       decoding="async" elementtiming="LCP-target"
                                                                       src="https://a0.muscache.com/im/pictures/user/58f6db96-fdc1-46e7-86d2-163eca05d129.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/58f6db96-fdc1-46e7-86d2-163eca05d129.jpg?im_w=240"
@@ -1494,7 +1494,7 @@
                                                                   <div class="_1h6n1zu" role="img" aria-busy="false"
                                                                     aria-label="Learn more about the host, Valerie."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
-                                                                    <img class="_9ofhsl" aria-hidden="true" alt="Learn more about the host, Valerie."
+                                                                    <img class="img-full" aria-hidden="true" alt="Learn more about the host, Valerie."
                                                                       decoding="async" elementtiming="LCP-target"
                                                                       src="https://a0.muscache.com/im/pictures/user/bb74f63f-d817-4af7-882d-abc4d8c7e060.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/bb74f63f-d817-4af7-882d-abc4d8c7e060.jpg?im_w=240"
@@ -6273,7 +6273,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                             <div class="_1c81x67" style="height: 56px; width: 56px; border-radius: 50%;">
                                                               <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Learn more about the host, Kat."
                                                                 style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
-                                                                <img class="_9ofhsl" aria-hidden="true" alt="Learn more about the host, Kat." decoding="async"
+                                                                <img class="img-full" aria-hidden="true" alt="Learn more about the host, Kat." decoding="async"
                                                                   elementtiming="LCP-target"
                                                                   src="https://a0.muscache.com/im/pictures/user/11b82a0c-ee36-4314-9cd1-b04ef6e5df54.jpg?im_w=240"
                                                                   data-original-uri="https://a0.muscache.com/im/pictures/user/11b82a0c-ee36-4314-9cd1-b04ef6e5df54.jpg?im_w=240"
@@ -6339,7 +6339,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                 <div class="_1c81x67" style="height: 32px; width: 32px; border-radius: 50%;">
                                                                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Learn more about the host, Melanie."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
-                                                                    <img class="_9ofhsl" aria-hidden="true" alt="Learn more about the host, Melanie." decoding="async"
+                                                                    <img class="img-full" aria-hidden="true" alt="Learn more about the host, Melanie." decoding="async"
                                                                       elementtiming="LCP-target"
                                                                       src="https://a0.muscache.com/im/pictures/user/51096f5e-7033-44d9-ad9e-ebb6bdb41051.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/51096f5e-7033-44d9-ad9e-ebb6bdb41051.jpg?im_w=240"
@@ -6358,7 +6358,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                 <div class="_1c81x67" style="height: 32px; width: 32px; border-radius: 50%;">
                                                                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Learn more about the host, Karina."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
-                                                                    <img class="_9ofhsl" aria-hidden="true" alt="Learn more about the host, Karina." decoding="async"
+                                                                    <img class="img-full" aria-hidden="true" alt="Learn more about the host, Karina." decoding="async"
                                                                       elementtiming="LCP-target"
                                                                       src="https://a0.muscache.com/im/pictures/user/58f6db96-fdc1-46e7-86d2-163eca05d129.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/58f6db96-fdc1-46e7-86d2-163eca05d129.jpg?im_w=240"
@@ -6377,7 +6377,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                 <div class="_1c81x67" style="height: 32px; width: 32px; border-radius: 50%;">
                                                                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Learn more about the host, Valerie."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
-                                                                    <img class="_9ofhsl" aria-hidden="true" alt="Learn more about the host, Valerie." decoding="async"
+                                                                    <img class="img-full" aria-hidden="true" alt="Learn more about the host, Valerie." decoding="async"
                                                                       elementtiming="LCP-target"
                                                                       src="https://a0.muscache.com/im/pictures/user/bb74f63f-d817-4af7-882d-abc4d8c7e060.jpg?im_w=240"
                                                                       data-original-uri="https://a0.muscache.com/im/pictures/user/bb74f63f-d817-4af7-882d-abc4d8c7e060.jpg?im_w=240"
