--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -164,7 +164,7 @@
                                                 width: 195;
                                                 min-height: 1px;
                                               " role="presentation" aria-hidden="true">
-                                              <img class="_9ofhsl" aria-hidden="true" elementtiming="LCP-target" src="//a0.muscache.com/airbnb/static/packages/assets/frontend/experience-p5/images/fireworks.6ada92670372f1d3c3bc7d216db654fb.gif" data-original-uri="//a0.muscache.com/airbnb/static/packages/assets/frontend/experience-p5/images/fireworks.6ada92670372f1d3c3bc7d216db654fb.gif" style="
+                                              <img class="img-full" aria-hidden="true" elementtiming="LCP-target" src="//a0.muscache.com/airbnb/static/packages/assets/frontend/experience-p5/images/fireworks.6ada92670372f1d3c3bc7d216db654fb.gif" data-original-uri="//a0.muscache.com/airbnb/static/packages/assets/frontend/experience-p5/images/fireworks.6ada92670372f1d3c3bc7d216db654fb.gif" style="
                                                   object-fit: cover;
                                                   vertical-align: bottom;
                                                 ">
@@ -194,7 +194,7 @@
                                             min-height: 1px;
                                             border-radius: 4px;
                                           ">
-                                          <img class="_9ofhsl" style="
+                                          <img class="img-full" style="
                                               object-fit: cover;
                                               vertical-align: bottom;
                                               border-radius: 4px;
@@ -266,7 +266,7 @@
                                               min-height: 1px;
                                               border-radius: 4px;
                                             ">
-                                            <img class="_9ofhsl" style="
+                                            <img class="img-full" style="
                                                 object-fit: cover;
                                                 vertical-align: bottom;
                                                 border-radius: 4px;
