--- a/submission/title.html
+++ b/submission/title.html
@@ -1236,7 +1236,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                  <li class="_1bwncnd">
                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt="Image of a group of runners"
                     elementtiming="LCP-target"
@@ -1251,7 +1251,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                  <li class="_1bwncnd">
                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt="Image of a group of people cooking"
                     elementtiming="LCP-target"
@@ -1266,7 +1266,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                  <li class="_1bwncnd">
                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt="Image of penguins"
                     elementtiming="LCP-target"
@@ -1281,7 +1281,7 @@ Lorem Ipsum is simply dummy text of the printing</textarea
                  <li class="_1bwncnd">
                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a woman smiling while playing guitar" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt="Image of a woman smiling while playing guitar"
                     elementtiming="LCP-target"
