--- a/become-a-host/welcome.html
+++ b/become-a-host/welcome.html
@@ -178,7 +178,7 @@
                                 <span class="_cy0new">
                                  <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                                   <img
-                                   class="_9ofhsl"
+                                   class="img-full"
                                    aria-hidden="true"
                                    alt=""
                                    decoding="async"
@@ -215,7 +215,7 @@
                                 <span class="_cy0new">
                                  <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                                   <img
-                                   class="_9ofhsl"
+                                   class="img-full"
                                    aria-hidden="true"
                                    alt=""
                                    decoding="async"
@@ -249,7 +249,7 @@
                                 <span class="_cy0new">
                                  <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                                   <img
-                                   class="_9ofhsl"
+                                   class="img-full"
                                    aria-hidden="true"
                                    alt=""
                                    decoding="async"
@@ -437,7 +437,7 @@
                   <span class="_cy0new">
                    <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                     <img
-                     class="_9ofhsl"
+                     class="img-full"
                      aria-hidden="true"
                      alt=""
                      decoding="async"
@@ -474,7 +474,7 @@
                   <span class="_cy0new">
                    <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                     <img
-                     class="_9ofhsl"
+                     class="img-full"
                      aria-hidden="true"
                      alt=""
                      decoding="async"
@@ -508,7 +508,7 @@
                   <span class="_cy0new">
                    <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                     <img
-                     class="_9ofhsl"
+                     class="img-full"
                      aria-hidden="true"
                      alt=""
                      decoding="async"
@@ -1047,7 +1047,7 @@
                  <span class="_1wiynur">
                   <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt=""
                     decoding="async"
