--- a/edit/title.html
+++ b/edit/title.html
@@ -766,7 +766,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                  <li class="_1bwncnd">
                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt="Image of a group of runners"
                     elementtiming="LCP-target"
@@ -781,7 +781,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                  <li class="_1bwncnd">
                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt="Image of a group of people cooking"
                     elementtiming="LCP-target"
@@ -796,7 +796,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                  <li class="_1bwncnd">
                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt="Image of penguins"
                     elementtiming="LCP-target"
@@ -811,7 +811,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                  <li class="_1bwncnd">
                   <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a woman smiling while playing guitar" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
-                    class="_9ofhsl"
+                    class="img-full"
                     aria-hidden="true"
                     alt="Image of a woman smiling while playing guitar"
                     elementtiming="LCP-target"
