--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -27523,7 +27523,7 @@
                           <div class="_1h6n1zu" role="img" aria-busy="false"
                             aria-label="A guest with a service animal being greeted by a host"
                             style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
-                            <img class="_9ofhsl" aria-hidden="true"
+                            <img class="img-full" aria-hidden="true"
                               alt="A guest with a service animal being greeted by a host" decoding="async"
                               elementtiming="LCP-target"
                               src="https://a0.muscache.com/pictures/adafb11b-41e9-49d3-908e-049dfd6934b6.jpg"
