--- a/payments/payment.html
+++ b/payments/payment.html
@@ -10938,7 +10938,7 @@ Thank you very much and we hope you enjoy your stay!</div>
                           <div class="_10euflo">
                             <div class="_1h6n1zu"
                               style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
-                              <img class="_9ofhsl" aria-hidden="true" alt="" elementtiming="LCP-target"
+                              <img class="img-full" aria-hidden="true" alt="" elementtiming="LCP-target"
                                 src="https://a0.muscache.com/im/pictures/user/ebf61663-ee6e-4aac-9a9a-7b3bf7815b2b.jpg?aki_policy=profile_x_medium"
                                 data-original-uri="https://a0.muscache.com/im/pictures/user/ebf61663-ee6e-4aac-9a9a-7b3bf7815b2b.jpg?aki_policy=profile_x_medium"
                                 style="object-fit: cover; vertical-align: bottom;">
