--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -3861,7 +3861,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                    <div class="_7ytxmo">
                     <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
-                      class="_9ofhsl"
+                      class="img-full"
                       aria-hidden="true"
                       alt="Image of a group of runners"
                       elementtiming="LCP-target"
@@ -3893,7 +3893,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                    <div class="_7ytxmo">
                     <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
-                      class="_9ofhsl"
+                      class="img-full"
                       aria-hidden="true"
                       alt="Image of a group of people cooking"
                       elementtiming="LCP-target"
@@ -3927,7 +3927,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                    <div class="_7ytxmo">
                     <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
-                      class="_9ofhsl"
+                      class="img-full"
                       aria-hidden="true"
                       alt="Image of penguins"
                       elementtiming="LCP-target"
@@ -3969,7 +3969,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                      style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;"
                     >
                      <img
-                      class="_9ofhsl"
+                      class="img-full"
                       aria-hidden="true"
                       alt="Image of a woman smiling while playing guitar"
                       elementtiming="LCP-target"
